# Casino-Qt

./: .cursorrules  CMakeLists.txt  clickablelabel.cpp  clickablelabel.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  minigame1.cpp  minigame2.cpp  minigame2.h  minigame3.cpp  minigame3.h
assets/: resources.qrc
client/: CMakeLists.txt  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  minigame1.cpp  minigame1.h  minigame2.h
server/: CMakeLists.txt  serverwindow.cpp  serverwindow.h  serverwindow.ui
